# find-submatrices

./: .gitignore  CMakeLists.txt  find_matrices.py  main.cpp  requirements.txt
include/: find_submatrix.h  mtx_to_csr.h
results/: FX_March2010.yaml  HFE18_96_in.yaml  Maragal_5.yaml  Maragal_6.yaml  Pres_Poisson.yaml  Sieber.info  Sieber.yaml  TSC_OPF_1047.yaml  TSC_OPF_300.yaml  TSOPF_FS_b162_c1.yaml  TSOPF_FS_b9_c6.yaml  TSOPF_RS_b162_c1.yaml  TSOPF_RS_b162_c3.yaml  TSOPF_RS_b162_c4.yaml  TSOPF_RS_b2383.yaml  TSOPF_RS_b300_c1.yaml  TSOPF_RS_b300_c2.yaml  TSOPF_RS_b300_c3.yaml  TSOPF_RS_b39_c19.yaml  TSOPF_RS_b39_c7.yaml  TSOPF_RS_b678_c1.yaml  TSOPF_RS_b678_c2.yaml  Trec12.yaml  Trec13.yaml  Trec14.yaml  Zd_Jac2.yaml  Zd_Jac3.yaml  Zd_Jac6.yaml  bbmat.yaml  bcsstk13.info  bcsstk13.yaml  bcsstk28.info  bcsstk28.yaml  bcsstk32.yaml  bibd_16_8.yaml  bibd_17_8.yaml  bibd_18_9.yaml  bibd_19_9.yaml  bibd_20_10.yaml  bibd_22_8.yaml  (+133 more)
tests/: test_csr_csc  test_csr_csc.cpp
